syntax = "proto3";

option go_package = "github.com/ssonit/common/protos";

package protos;

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse);
    rpc GetOrder(GetOrderRequest) returns (GetOrderResponse);
}

message GetOrderRequest {
    string id = 1;
    string customerId = 2;
}

message GetOrderResponse {
    string id = 1;
    string customerId = 2;
    string status = 3;
    repeated ItemsWithQuantity items = 4;
}

message CreateOrderRequest {
    string customerId = 1;
    repeated ItemsWithQuantity items = 2;
}

message ItemsWithQuantity {
    string id = 1;
    int32 quantity = 2;
} 

message CreateOrderResponse {
    string id = 1;
    string customerId = 2;
    string status = 3;
}

